[package]
name = "theballs-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
bincode = "1.3.3"
clap = { version = "4.5.32", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["ansi"] }
